--- a/ReadMe
+++ b/ReadMe
@@ -1,4 +1,4 @@
-This is a script to install Metasploit, Covenant, SilentTrinity, Empire, StarKiller, and Merlin onto a C2 server. 
+This is a script to install Metasploit, Covenant, SilentTrinity, Empire, StarKiller, PoshC2 and Merlin onto a C2 server. 
 
 Usage:
 
